# roots-zka-analysis

./: .gitignore  LICENSE  README.md
analysis/: RESULTS.md
impl/: Cargo.toml  README.md
impl/src/: envelope.rs  handoff.rs  keystore.rs  lib.rs  primitives.rs
impl/tests/: attack.rs  kat.rs  properties.rs
model/: v1.spthy  v1_core.spthy  v1_recovery.spthy  v1_rotation.spthy  v2.spthy  v2_extraction.spthy
proofs/: ENVELOPE_ARGUMENT.md
spec/: PROTOCOL_V1.md  PROTOCOL_V2.md
