[package]
name = "roots-zka"
version = "0.1.0"
edition = "2021"
description = "Reference implementation of the Roots ZKA primitives, discharging the proof obligations from ../proofs and reproducing the v1 handoff attack / v2 defense from ../model."
license = "MIT"

[dependencies]
aes-gcm = "0.10"
aes-kw = "0.2"
aes = "0.8"
x25519-dalek = "2.0"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
hkdf = "0.12"
sha2 = "0.10"
hmac = "0.12"
argon2 = "0.5"
bip39 = "2.0"
rand = "0.8"
rand_core = "0.6"
hex = "0.4"
subtle = "2.5"

[dev-dependencies]
proptest = "1"
hex-literal = "0.4"

[[test]]
name = "kat"
path = "tests/kat.rs"

[[test]]
name = "properties"
path = "tests/properties.rs"

[[test]]
name = "attack"
path = "tests/attack.rs"
